--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 100vh;
             margin: 18px;
             box-sizing: border-box;
-            background-image: url(assets/dark-night.png);
+            background-image: url(dark-night.png);
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -460,5 +460,6 @@
         };
     </script>
 </body>
+
 
 </html>
