--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
             white-space: pre;
             color: #C9C7BF;
         }
+        #credits{
+            font-size: 16px;
+            color: #C9C7BF;
+            margin-top: 18px;
+        }
+        #credits a{
+            text-decoration-line: 1px;
+            color: #EFEDE3;
+            letter-spacing: 20%;
+        }
     </style>
 </head>
 
@@ -117,6 +127,7 @@
     <div id="location-info"></div>
     <div id="greeting"></div>
     <div id="sun-info"></div>
+    <div id="credits">Inspired by <a href="https://x.com/soggyburritowu" target="_blank">Emmy</a>, brought to life by <a href="https://x.com/yanndurandet">Yann</a></div>
     <script>
         const dawnColors = [
             '#2B3549',
@@ -463,3 +474,4 @@
 
 
 </html>
+
