--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div id="location-info"></div>
     <div id="greeting"></div>
     <div id="sun-info"></div>
-    <div id="credits">Inspired by <a href="https://x.com/soggyburritowu" target="_blank">Emmy</a>, brought to life by <a href="https://x.com/yanndurandet">Yann</a></div>
+    <div id="credits">Inspired by <a href="https://x.com/soggyburritowu" target="_blank">Emmi</a>, brought to life by <a href="https://x.com/yanndurandet">Yann</a></div>
     <script>
         const dawnColors = [
             '#2B3549',
@@ -474,4 +474,5 @@
 
 
 </html>
+
 
